syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Grpc.ProfileService";

package profile;

service GrpcProfileService {
  rpc GetToken (TokenRequest) returns (TokenReply);
}

message TokenRequest {
  string username = 1;
  string password = 2;
}

message TokenReply {
  bool success = 1;
  string token = 2;
  google.protobuf.Timestamp expiration = 3;
}
